added mixins for media requests and variables for breakpoints

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,2 +1,6 @@
 // Тут будуть змінні у форматі SASS
 // Приклад оголошення: $defaultPadding: 20px
+
+$mobileBreakpoint: 480px;
+$tabletBreakpoint: 768px;
+$desktopBreakpoint: 1280px;
