--- a/src/sass/utils/_main.scss
+++ b/src/sass/utils/_main.scss
@@ -2,3 +2,10 @@
 
 @import 'variables';
 @import 'mixins';
+
+@import "./base/reset";
+@import "./base/common";
+
+@import "./components/container";
+
+@import "./layouts/blog";
