--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -10,3 +10,10 @@
         }
     
 }
+
+.footer-link {
+      font-size: 16px;
+      line-height: 1.18;
+      text-transform: capitalize;
+      color: #8D9289;
+}
