--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -37,7 +37,9 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 1.16;
+    color: #FFFFFF;
     margin-bottom: 25px;
+
 
 }
 
@@ -96,6 +98,10 @@
       line-height: 1.18;
       text-transform: capitalize;
       color: #8D9289;
+}
+
+.footer-list-link {
+    color: #ffffff;
 }
 
 .footer-title {
