--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -84,8 +84,20 @@
         border-radius: 50%;
         align-items: center;
         justify-content: center;
-        fill: #ffffff;
-        background-color: greenyellow ;
+        background-color: #ffffff ;
+}
+
+.footer-cos-link {
+            display: flex;
+            fill: black;
+            align-items: center;
+            justify-content: center;
+            background-size: 20px;
+            background-repeat: no-repeat;
+            background-position: center;
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
 }
 
 .footer-item {
