--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -76,6 +76,7 @@
         
             @include media-desktop() {
             flex-direction: column;
+            margin-right: 281px;
             }
 }
 
