--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -38,10 +38,15 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 1.16;
-    color: #FFFFFF;
     margin-bottom: 25px;
+    
+@include media-tablet() {
     text-align: center;
+}
+}
 
+.footer-logo-link {
+    color: #ffffff;
 }
 
 .footer-flex {
