--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,12 +2,12 @@
 // Не чіпати
 
 // ! Modern normalize стоїть виключно на початку, щоби перебивання стилів працювало правильно
-@import '~node_modules/modern-normalize/modern-normalize.css';
+@import "~node_modules/modern-normalize/modern-normalize.css";
 
 // ! Змінні та база також зверху
-@import 'base/main';
-@import 'utils/main';
+@import "base/main";
+@import "utils/main";
 
 // * Бажано також не змінювати порядок
-@import 'layout/main';
-@import 'pages/main';
+@import "layout/main";
+@import "pages/main";
