--- a/src/sass/pages/_blog.scss
+++ b/src/sass/pages/_blog.scss
@@ -31,11 +31,7 @@
 .blog-title {
   @include font(500, 24px, 1.16);
   // ця тінь є в таких же заголовках для інших секцій
-<<<<<<< Updated upstream
-  // можна винести в окрему змінну
-=======
   // Gotha винести в окрему змінну
->>>>>>> Stashed changes
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 15px;
 
@@ -107,7 +103,7 @@
   display: block;
   @include font(500, 16px, 1.16);
   margin-bottom: 8px;
-  color: var($secondaryTextColor);
+  color: $secondaryTextColor;
 
   @include media-tablet {
     @include font(500, 24px, 1);
@@ -139,7 +135,7 @@
   display: block;
   text-align: right;
   @include font(500, 16px, 1);
-  color: var($accentTextColor);
+  color: $accentTextColor;
 
   @include media-tablet {
     @include font(500, 24px, 1);
