fixed changing padding starting on tablet

--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -9,6 +9,7 @@
 
   @include media-tablet() {
     width: $tabletBreakpoint;
+    padding-inline: $containerPaddingDefault;
   }
 
   @include media-desktop() {
