--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -4,6 +4,14 @@
 
 .section-hero {
   height: 600px;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 180px;
+
   background-image: url('../images/hero/hero.webp');
   background-repeat: no-repeat;
   background-position: calc(100% + 130px);
@@ -26,25 +34,16 @@
     }
   }
 
-  @include media-tablet() {
-    height: 728px;
-
-    background-position: calc(100% + 130px) -30px;
-  }
-}
-
-.hero-content {
-  display: flex;
-  flex-direction: column;
-
-  gap: 30px;
-  padding-top: 180px;
-
   @media screen and (max-width: 767px) {
     align-items: center;
   }
 
   @include media-tablet() {
+    height: 728px;
+
+    // background-position: calc(100% + 130px) -30px;
+    background-position: center;
+    background-size: contain;
     gap: 94px;
   }
 }
@@ -59,5 +58,9 @@
   @include media-tablet() {
     width: 388px;
     font-size: 56px;
+  }
+
+  @include media-desktop() {
+    font-size: 64px;
   }
 }
