--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -22,16 +22,16 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-image: url(../images/take-order/bg_mob.jpg);
+  // background-image: url(../images/take-order/bg_mob.jpg);
   border: 0;
   margin: 0;
 
   @media screen and (min-width: 768px) {
-    background-image: url(../images/take-order/bg_tab.jpg);
+    // background-image: url(../images/take-order/bg_tab.jpg);
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: url(../images/take-order/bg_desktop.jpg);
+    // background-image: url(../images/take-order/bg_desktop.jpg);
   }
 }
 
