--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -1,25 +1,3 @@
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6,
-// p {
-//     margin: 0;
-// }
-
-// ul,
-// ol {
-//     margin: 0;
-//     padding-left: 0;
-// }
-
-// img {
-//   display: block;
-//   min-width: 100%;
-//   height: auto;
-// }
-
 body {
   font-family: 'Roboto', sans-serif;
   background-image: url(../images/take-order/bg_mob.jpg);
@@ -34,17 +12,6 @@ body {
     background-image: url(../images/take-order/bg_desktop.jpg);
   }
 }
-
-// .list {
-//     padding: 0;
-//     margin: 0;
-//     list-style: none;
-// }
-
-// .link {
-//     text-decoration: none;
-//     color: var(--main-color);
-// }
 
 .no-scroll {
   overflow: hidden;
@@ -82,100 +49,15 @@ body {
 }
 
 .to__title {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1.16;
-  color: #ffffff;
+  @include font(600, 24px, 1.16);
+  color: $primaryТextСolor;
 
   @media screen and (min-width: 768px) {
     margin-left: 83px;
-    font-size: 56px;
-    line-height: 1.18;
+    @include font(500, 56px, 1.16);
   }
 }
 
-/* Линии на бордере */
-
-.to__line {
-  margin-bottom: 24px;
-
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 56px;
-  }
-}
-
-.to__line_first {
-  margin-bottom: -5px;
-}
-
-.to__line_first,
-.to__line_second {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.to__line-one {
-  width: 40%;
-  height: 8px;
-  border-bottom: 1px solid #7be34a;
-  border-right: 1px solid #7be34a;
-  box-shadow: 0px 4px 25px rgba(123, 227, 74, 0.25);
-
-  @media screen and (min-width: 768px) {
-    width: 53%;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 30%;
-  }
-}
-
-.to__line-two {
-  width: 60%;
-  height: 8px;
-  border-top: 1px solid #7be34a;
-  box-shadow: 0px 4px 25px rgba(123, 227, 74, 0.25);
-
-  @media screen and (min-width: 768px) {
-    width: 47%;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 70%;
-  }
-}
-
-.to__line-three {
-  width: 41%;
-  height: 7px;
-  border-bottom: 1px solid #28780d;
-  border-right: 1px solid #28780d;
-  box-shadow: 0px 4px 25px rgba(40, 120, 13, 0.25);
-
-  @media screen and (min-width: 768px) {
-    width: calc(53% + 3px);
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: calc(30% + 3px);
-  }
-}
-
-.to__line-four {
-  width: 59%;
-  height: 7px;
-  border-top: 1px solid #28780d;
-  box-shadow: 0px 4px 25px rgba(40, 120, 13, 0.25);
-
-  @media screen and (min-width: 768px) {
-    width: calc(47% - 3px);
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: calc(70% - 3px);
-  }
-}
-/* Конец линиям */
 
 @media screen and (min-width: 1280px) {
   .to__product_info {
@@ -189,15 +71,12 @@ body {
 .to__name {
   display: block;
   margin-bottom: 16px;
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 1.19;
-  color: #ffffff;
+  @include font(600, 32px, 1.19);
+  color: $primaryТextСolor;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 24px;
-    font-size: 56px;
-    line-height: 1.18;
+    @include font(600, 56px, 1.18);
   }
 
   @media screen and (min-width: 768px) {
@@ -208,7 +87,6 @@ body {
 .product {
   @media screen and (min-width: 768px) {
     display: flex;
-    // justify-content: space-between;
     align-items: center;
     margin-bottom: 24px;
   }
@@ -267,9 +145,7 @@ body {
 }
 
 .to__sale-price {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1;
+  @include font(600, 16px, 1);
   text-decoration-line: line-through;
   color: #8d9289;
 
@@ -280,23 +156,19 @@ body {
 
   @media screen and (min-width: 1280px) {
     margin-bottom: 0;
-    font-size: 24px;
     margin-right: 40px;
   }
 }
 
 .to__discount-price {
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 1;
-  color: #86e543;
+  @include font(600, 32px, 1);
+  color: $accentTextColor;
 
   @media screen and (min-width: 768px) {
     font-size: 48px;
   }
 
   @media screen and (min-width: 1280px) {
-    font-size: 48px;
     margin-right: 320px;
   }
 }
@@ -343,10 +215,8 @@ body {
 
 .to__contact-title {
   width: 100%;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1.17;
-  color: #86e543;
+  @include font(600, 24px, 1.17);
+  color: $accentTextColor;
   margin-bottom: 16px;
 
   @media screen and (min-width: 768px) {
@@ -370,7 +240,7 @@ input:invalid {
 
 input,
 input:valid {
-  border-color: #86e543;
+  border-color: $accentTextColor;
 }
 
 .to__form-full {
@@ -393,14 +263,12 @@ input:valid {
   display: block;
   padding: 0;
   border: 0;
-  border-bottom: 1px solid #86e543;
+  border-bottom: 1px solid $accentTextColor;
   background-color: transparent;
   width: 100%;
   height: 24px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #ffffff;
+  @include font(400, 16px, 1.25);
+  color: $primaryТextСolor;
 
   @media screen and (min-width: 768px) {
     font-size: 18px;
@@ -409,7 +277,7 @@ input:valid {
 }
 
 .to__form-input::placeholder {
-  color: #ffffff;
+  color: $primaryТextСolor;
 }
 
 .to__form-input:focus {
@@ -439,13 +307,11 @@ input:valid {
   width: 100%;
   height: 24px;
   margin-bottom: 40px;
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
+  color: $primaryТextСolor;
+  @include font(400, 16px, 1.25);
   position: relative;
   order: 0;
-  border-bottom: 1px solid #86e543;
+  border-bottom: 1px solid $accentTextColor;
 
   @media screen and (min-width: 768px) {
     width: 590px;
@@ -475,7 +341,7 @@ input:valid {
   max-height: 240px;
   opacity: 1;
   overflow-y: scroll;
-  border-bottom: 1px solid #86e543;
+  border-bottom: 1px solid $accentTextColor;
 }
 
 .select-box .options-container.active + .selected::after {
@@ -512,12 +378,10 @@ input:valid {
 // Конец нового селектора
 
 .comment {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
+  @include font(400, 16px, 1.25);
   text-transform: capitalize;
   background-color: transparent;
-  color: #ffffff;
+  color: $primaryТextСolor;
 
   @media screen and (min-width: 1280px) {
     margin-left: 20px;
@@ -529,7 +393,7 @@ input:valid {
   width: 100%;
   height: 95px;
   margin-bottom: 24px;
-  border: 1px solid #86e543;
+  border: 1px solid $accentTextColor;
   background-color: transparent;
   border-radius: 0px;
 
@@ -557,12 +421,10 @@ input:valid {
   display: block;
   text-align: center;
   margin: 0 auto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.19;
+  @include font(700, 16px, 1.19);
   text-align: center;
   text-transform: uppercase;
-  border: 1px solid #86e543;
+  border: 1px solid $accentTextColor;
   border-radius: 16px;
   cursor: pointer;
 
@@ -579,7 +441,7 @@ input:valid {
 .to__form-btn-buy {
   margin-bottom: 16px;
   color: #01383a;
-  background: #86e543;
+  background: $accentTextColor;
   padding: 16px 42px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -602,7 +464,7 @@ input:valid {
 .to__form-btn-add {
   margin-bottom: 48px;
   background-color: transparent;
-  color: #86e543;
+  color: $accentTextColor;
   padding: 16px 36px;
   transition: box-shadow 100ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -619,7 +481,7 @@ input:valid {
 .to__form-btn-add:hover,
 .to__form-btn-add:focus {
   color: #01383a;
-  background: #86e543;
+  background: $accentTextColor;
   box-shadow: 0px 8px 20px rgba(134, 229, 67, 0.5),
     0px 4px 10px rgba(255, 255, 255, 0.1);
 }
