--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,11 +1,11 @@
 body {
-  font-family: 'Roboto', sans-serif;
+   font-family: "Roboto", sans-serif;
 
-  background-color: $backgroundColor;
+   background-color: #01383a;
 }
 
 img {
-  display: block;
-  width: 100%;
-  height: auto;
+   display: block;
+   width: 100%;
+   height: auto;
 }
