--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -1,8 +1,8 @@
 // Це головний файл, що робить імпорти у цій папці
 
-@import 'accessories';
-@import 'blog-article';
-@import 'blog';
-@import 'contacts';
-@import 'sales';
-@import 'take-order';
+@import "accessories";
+@import "blog-article";
+@import "blog";
+@import "contacts";
+@import "sales";
+@import "take-order";
