--- a/src/partials/lines.html
+++ b/src/partials/lines.html
@@ -1,10 +1,10 @@
-<section class="lines">
-    <div class="line_first">
+<div class="lines">
+    <div class="line-first">
         <div class="line-one"></div>
         <div class="line-two"></div>
     </div>
-    <div class="line_second">
+    <div class="line-second">
         <div class="line-three"></div>
         <div class="line-four"></div>
     </div>
-</section>
+</div>
