--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,7 +16,7 @@ $containerPaddingSmall: 16px;
   /* колір текста основний  #FFFFF*/
   /* колір текста вторинний #8D9289*/
   /* колір текста акцентний #212121 */
-  $primaryТextСolor:#ffffff;
+  $primaryTextColor:#ffffff;
   $secondaryTextColor:#8D9289;
   $accentTextColor:#86E543;
    /* колір фона основний  */
