--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,14 @@
-<div class="mobile-menu-container">
+<div class="mobile-menu-header">
+   <a href="" class="logo">SHOP FOR GAMERS</a>
+   <svg class="mobile-menu-close" width="36" height="36">
+      <use href="./images/icons.svg#icon-icon-menu-close-cross"></use>
+   </svg>
+
+   <button class="mobile-menu-button">Shop now</button>
+</div>
+<div class="mobile-menu-main">
+
+
    <ul class="page-list">
       <li class="page"><a href="" class="page-link">accessories</a></li>
       <li class="page"><a href="" class="page-link">contact</a></li>
