--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,14 +11,11 @@ $containerPaddingDefault: 40px;
 $containerPaddingBig: 80px;
 $containerPaddingSmall: 16px;
 
-
-
-  /* колір текста основний  #FFFFF*/
-  /* колір текста вторинний #8D9289*/
-  /* колір текста акцентний #212121 */
-  $primaryTextColor:#ffffff;
-  $secondaryTextColor:#8D9289;
-  $accentTextColor:#86E543;
-   /* колір фона основний  */
-  $backgroundColor:  #01383A;
-  
+/* колір текста основний  #FFFFF*/
+/* колір текста вторинний #8D9289*/
+/* колір текста акцентний #212121 */
+$primaryTextColor: #ffffff;
+$secondaryTextColor: #8d9289;
+$accentTextColor: #86e543;
+/* колір фона основний  */
+$backgroundColor: #01383a;
