--- a/src/sass/pages/_blog.scss
+++ b/src/sass/pages/_blog.scss
@@ -148,3 +148,57 @@
     @include font(500, 24px, 1);
   }
 }
+
+// ----------------Анімація загрузки----------------
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  gap: 16px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.loading span {
+  width: 20px;
+  height: 16px;
+  border-radius: 30px;
+  //  animation: scale 0.9s ease-out infinite;
+ animation: scale 1.5s linear infinite;
+  // animation: scale 0.9s alternate infinite ease;
+  background-color:$primaryTextColor;
+}
+
+.loading span:nth-child(1) {
+   animation-delay: 0.3s;
+  background-color:$primaryTextColor;
+}
+
+.loading span:nth-child(2) {
+  animation-delay: 0.6s;
+  background-color:$primaryTextColor;
+}
+
+.loading span:nth-child(3) {
+  animation-delay: 0.9s;
+  background-color:$primaryTextColor;
+}
+
+
+@keyframes scale {
+  
+  0% {
+    transform: scaleX(0.5);
+  }
+
+  50%,
+  75% {
+    transform: scaleX(1.5);
+  }
+
+  80%,
+  100% {
+    opacity: 0;
+  }
+}
