--- a/src/partials/accessories.html
+++ b/src/partials/accessories.html
@@ -17,14 +17,14 @@
 
     <h1 class="accessories-title">All accessories</h1>
 
-    <div class="to__line">
-      <div class="to__line_first">
-        <div class="to__line-one"></div>
-        <div class="to__line-two"></div>
+    <div class="lines">
+      <div class="line-first">
+        <div class="line-one"></div>
+        <div class="line-two"></div>
       </div>
-      <div class="to__line_second">
-        <div class="to__line-three"></div>
-        <div class="to__line-four"></div>
+      <div class="line-second">
+        <div class="line-three"></div>
+        <div class="line-four"></div>
       </div>
     </div>
 
