redid the inputs, conteiner in to.scss

--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -17,7 +17,8 @@ body {
   overflow: hidden;
 }
 
-.container {
+.to-main {
+  padding-top: 40px;
   width: 100%;
   padding: 0 16px;
   margin: 0 auto;
@@ -25,26 +26,15 @@ body {
   @media screen and (min-width: 320px) {
     width: 320px;
   }
-
   @media screen and (min-width: 768px) {
+    padding-top: 120px;
     width: 768px;
     padding: 0 40px;
   }
 
   @media screen and (min-width: 1280px) {
+    padding-top: 120px;
     width: 1280px;
-  }
-}
-
-.to-main {
-  padding-top: 40px;
-
-  @media screen and (min-width: 768px) {
-    padding-top: 120px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    padding-top: 120px;
   }
 }
 
@@ -254,6 +244,9 @@ input:valid {
   margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 1280px) {
     width: 590px;
   }
 }
@@ -280,27 +273,30 @@ input:valid {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  
+
   @include font(400, 16px, 1.25);
   color: $primaryТextСolor;
 
   @media screen and (min-width: 768px) {
     font-size: 18px;
     line-height: 1.1;
-}
+  }
 }
 
-.to-form-input::placeholder {
-  color: $primaryТextСolor;
-}
+// .to-form-input::placeholder {
+//   color: $primaryТextСolor;
+// }
 
 .to-form-input:focus {
   outline: inherit;
 }
 
-.to-form-input:focus + .to-form-label {
-transform: translateY(-30px);
+.to-form-input:focus + .to-form-label,
+.to-form-input:not(:placeholder-shown) + .to-form-label {
+  transform: translateY(-30px);
+  font-size: 12px;
 }
+
 
 // Новый селектор для выбора
 
@@ -332,7 +328,7 @@ transform: translateY(-30px);
   border-bottom: 1px solid $accentTextColor;
 
   @media screen and (min-width: 768px) {
-    width: 590px;
+    width: 100%;
     font-size: 18px;
     line-height: 1.1;
   }
@@ -412,6 +408,7 @@ transform: translateY(-30px);
   width: 100%;
   height: 95px;
   margin-bottom: 24px;
+  color: $primaryТextСolor;
   border: 1px solid $accentTextColor;
   background-color: transparent;
   border-radius: 0px;
@@ -425,6 +422,10 @@ transform: translateY(-30px);
     margin-bottom: 48px;
     margin-left: 20px;
   }
+}
+
+.to-form-textarea:focus{
+  outline: inherit;
 }
 
 .to-form-btn-grp {
