--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,7 @@
 
 <!-- Модальне вікно (Take order) - запуск з кнопки Buy it now  -->
 
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modal-1>
   <div class="modal-window take-order-1">
     <button class="modal-close-button" type="button" data-modal-close>
       <svg class="close-icon" width="40" height="40">
@@ -19,7 +19,7 @@
 
 <!-- Модальне вікно (Take order) - запуск з кнопки Add to cart -->
 
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modal-2>
   <div class="modal-window take-order-2">
     <button class="modal-close-button" type="button" data-modal-close>
       <svg class="close-icon" width="40" height="40">
