--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -40,7 +40,7 @@ body {
 
 .to-title {
   @include font(600, 24px, 1.16);
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 768px) {
     margin-left: 83px;
@@ -61,7 +61,7 @@ body {
   display: block;
   margin-bottom: 16px;
   @include font(600, 32px, 1.19);
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 24px;
@@ -260,7 +260,7 @@ input:valid {
   width: 100%;
   height: 24px;
   @include font(400, 16px, 1.25);
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 768px) {
     font-size: 18px;
@@ -275,7 +275,7 @@ input:valid {
   transform: translateY(-50%);
 
   @include font(400, 16px, 1.25);
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 768px) {
     font-size: 18px;
@@ -296,7 +296,6 @@ input:valid {
   transform: translateY(-30px);
   font-size: 12px;
 }
-
 
 // Новый селектор для выбора
 
@@ -321,7 +320,7 @@ input:valid {
   width: 100%;
   height: 24px;
   margin-bottom: 40px;
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
   @include font(400, 16px, 1.25);
   position: relative;
   order: 0;
@@ -396,7 +395,7 @@ input:valid {
   @include font(400, 16px, 1.25);
   text-transform: capitalize;
   background-color: transparent;
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 1280px) {
     margin-left: 20px;
@@ -408,7 +407,7 @@ input:valid {
   width: 100%;
   height: 95px;
   margin-bottom: 24px;
-  color: $primaryТextСolor;
+  color: $primaryTextColor;
   border: 1px solid $accentTextColor;
   background-color: transparent;
   border-radius: 0px;
@@ -424,7 +423,7 @@ input:valid {
   }
 }
 
-.to-form-textarea:focus{
+.to-form-textarea:focus {
   outline: inherit;
 }
 
