added temporary link as button

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,15 @@
 <section class="section section-hero">
   <div class="container">
     <div class="hero-content">
-      <div class="hero-title">Best shop for buying gaming products</div>
+      <h1 class="hero-title">Best shop for buying gaming products</h1>
 
-      <!-- TODO: Hero button, replace with a component -->
-      <button style="width: 100px"><a href=""></a>Start shopping.</button>
+      <!-- * Uncomment when PR #23 is merged -->
+      <!-- <a class="main-button" href="./partials/accessories.html"
+        >Start shopping</a
+      > -->
+
+      <!-- * Delete when PR #23 is merged -->
+      <button class="main-button">Start shopping</button>
     </div>
   </div>
 </section>
