--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,27 +3,27 @@
 }
 
 .section-hero {
-  // background-image: url('../images/hero/hero.webp');
-  // background-repeat: no-repeat;
-  // background-position: center;
-  // background-size: cover;
+  background-image: url('../images/hero/hero.webp');
+  background-repeat: no-repeat;
+  background-position: center right 30%;
+  background-size: cover;
 
-  // @media (min-device-pixel-ratio: 2),
-  //   (min-resolution: 192dpi),
-  //   (min-resolution: 2dppx) {
-  //   background-image: url('../images/hero/hero@2x.webp');
-  // }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url('../images/hero/hero@2x.webp');
+  }
 
-  // // * if no webp support in browser, load jpg. Check by checkWebpSupport.js
-  // body.no-webp & {
-  //   background-image: url('../images/hero/hero.jpg');
+  // * if no webp support in browser, load jpg. Check by checkWebpSupport.js
+  body.no-webp & {
+    background-image: url('../images/hero/hero.jpg');
 
-  //   @media (min-device-pixel-ratio: 2),
-  //     (min-resolution: 192dpi),
-  //     (min-resolution: 2dppx) {
-  //     background-image: url('../images/hero/hero@2x.jpg');
-  //   }
-  // }
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('../images/hero/hero@2x.jpg');
+    }
+  }
 }
 
 .hero-content {
