--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,27 +3,31 @@
 }
 
 .section-hero {
-  background-image: url('../images/hero/hero.webp');
+  background-image: url('../images/hero/keyboard.webp'),
+    url('../images/hero/hero.webp');
   background-repeat: no-repeat;
-  background-position: center right 30%;
-  background-size: cover;
+  background-position: center right -80px;
+  background-size: 150px, cover;
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url('../images/hero/hero@2x.webp');
+    background-image: url('../images/hero/keyboard@2x.webp'),
+      url('../images/hero/hero@2x.webp');
+    background-position: center right -80px;
   }
 
   // * if no webp support in browser, load jpg. Check by` checkWebpSupport.js
-  body.no-webp & {
-    background-image: url('../images/hero/hero.jpg');
+  // TODO: insert JPG version
+  //   body.no-webp & {
+  //     background-image: url('../images/hero/hero.jpg');
 
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url('../images/hero/hero@2x.jpg');
-    }
-  }
+  //     @media (min-device-pixel-ratio: 2),
+  //       (min-resolution: 192dpi),
+  //       (min-resolution: 2dppx) {
+  //       background-image: url('../images/hero/hero@2x.jpg');
+  //     }
+  //   }
 }
 
 .hero-content {
